--- a/covid19-japan/default/data/ui/views/covid19_japan.xml
+++ b/covid19-japan/default/data/ui/views/covid19_japan.xml
@@ -762,6 +762,64 @@
         </drilldown>
       </chart>
     </panel>
+    <panel>
+      <title>実効再生産数 ($prefectures_last_date$ 現在)</title>
+      <chart>
+        <title>(直近7日間の新規陽性者数 / その前7日間の新規陽性者数)^(平均世代時間 / 報告間隔)</title>
+        <search base="daily_confirmed_base">
+          <query>
+            | fields - "ダイヤモンド・プリンセス", "空港検疫", "長崎のクルーズ船"
+            | eval local_earliest=relative_time(strptime("$prefectures_last_date$", "%Y/%m/%d %H:%M"),"@d-15d")
+            | where _time&gt;=local_earliest
+            | fields - local_earliest, local_latest
+
+            | streamstats current=true window=7 sum(*) as 7days_sum_*
+            | streamstats current=false window=7 first(7days_sum_*) as prev_7days_sum_*
+            | eval term=7
+            | eval rep=5
+            | foreach *7days_sum_* [ eval "&lt;&lt;MATCHSEG2&gt;&gt;"=round(pow(('7days_sum_&lt;&lt;MATCHSEG2&gt;&gt;' / 'prev_7days_sum_&lt;&lt;MATCHSEG2&gt;&gt;'),(term/rep)), 3) ]
+            | fields - *7days_sum_*, rep, term
+            | foreach * [ fillnull value=0.000 "&lt;&lt;FIELD&gt;&gt;" ]
+            | stats last(*) as *
+            | transpose column_name=name_ja
+            | rename "row 1" as "実効再生産数"
+            | sort - "実効再生産数"
+          </query>
+        </search>
+        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisTitleX.visibility">collapsed</option>
+        <option name="charting.axisTitleY.visibility">visible</option>
+        <option name="charting.axisTitleY2.visibility">visible</option>
+        <option name="charting.axisX.abbreviation">none</option>
+        <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.abbreviation">none</option>
+        <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.abbreviation">none</option>
+        <option name="charting.axisY2.enabled">0</option>
+        <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">bar</option>
+        <option name="charting.chart.bubbleMaximumSize">50</option>
+        <option name="charting.chart.bubbleMinimumSize">10</option>
+        <option name="charting.chart.bubbleSizeBy">area</option>
+        <option name="charting.chart.nullValueMode">gaps</option>
+        <option name="charting.chart.showDataLabels">all</option>
+        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
+        <option name="charting.chart.stackMode">default</option>
+        <option name="charting.chart.style">shiny</option>
+        <option name="charting.drilldown">none</option>
+        <option name="charting.layout.splitSeries">0</option>
+        <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
+        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
+        <option name="charting.legend.mode">standard</option>
+        <option name="charting.legend.placement">none</option>
+        <option name="charting.lineWidth">2</option>
+        <option name="height">980</option>
+        <option name="trellis.enabled">0</option>
+        <option name="trellis.scales.shared">1</option>
+        <option name="trellis.size">medium</option>
+      </chart>
+    </panel>
   </row>
   <row>
     <panel>
